--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon index -q",
     "start": "node index",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll --collect-coverage"
   },
   "repository": {
     "type": "git",
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "eslint": "^8.2.0",
+    "jest": "^27.3.1",
     "nodemon": "^2.0.15",
     "supertest": "^6.1.6"
   }
